--- a/Interpreting What is Important/Rossmann/04-FSed LSTM Rossmann.ipynb
+++ b/Interpreting What is Important/Rossmann/04-FSed LSTM Rossmann.ipynb
@@ -64,7 +64,36 @@
     "    e_t = y_true - y_pred\n",
     "    scale = mean_absolute_error(y_train[1:], y_train[:-1])\n",
     "    return np.mean(np.abs(e_t / scale))\n",
-    "\n"
+    "\n",
+    "\n",
+    "import types\n",
+    "\n",
+    "def clear_variables():\n",
+    "    # Get a list of global variable names\n",
+    "    global_vars = globals().copy()\n",
+    "    \n",
+    "    # Iterate over global variables\n",
+    "    for var_name in global_vars:\n",
+    "        # Check if the variable is a function or a class\n",
+    "        if isinstance(global_vars[var_name], (types.FunctionType, type)) or var_name.startswith('_warningfilters'):\n",
+    "            # Skip functions and classes\n",
+    "            continue\n",
+    "        # Delete the variable\n",
+    "        del globals()[var_name]\n",
+    "        \n",
+    "def make_variables_global():\n",
+    "    # Access the global namespace\n",
+    "    global_vars = globals()\n",
+    "    \n",
+    "    # Access the local namespace\n",
+    "    local_vars = locals()\n",
+    "    \n",
+    "    # Iterate over local variables\n",
+    "    for var_name in local_vars:\n",
+    "        # Check if the variable is not a special variable\n",
+    "        if not var_name.startswith('__') and not var_name.endswith('__'):\n",
+    "            # Make the variable global\n",
+    "            global_vars[var_name] = local_vars[var_name]\n"
    ]
   },
   {
@@ -91,39 +120,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_EPOCHS = 220\n",
+    "def initial_set_up():\n",
+    "    N_EPOCHS = 220\n",
+    "    arr = np.arange(14, N_EPOCHS, 5)\n",
+    "    # Convert the elements of the array to strings and create a list\n",
+    "    checkpoints = [str(x) for x in arr]\n",
+    "    BATCH_SIZE = 7\n",
+    "    SEQUENCE_LENGTH = 15\n",
+    "    N_HIDDEN = 32\n",
+    "    N_LAYERS = 1\n",
+    "    PATIENCE = 500\n",
+    "    LEARNING = 0.005\n",
     "\n",
-    "arr = np.arange(14, N_EPOCHS, 5)\n",
-    "# Convert the elements of the array to strings and create a list\n",
-    "checkpoints = [str(x) for x in arr]\n",
+    "    TGT = 'Sales'\n",
     "\n",
-    "BATCH_SIZE = 7\n",
-    "SEQUENCE_LENGTH = 15\n",
-    "N_HIDDEN = 32\n",
-    "N_LAYERS = 1\n",
-    "PATIENCE = 500\n",
-    "LEARNING = 0.005\n",
-    "\n",
-    "TGT = 'Sales'\n",
-    "\n",
-    "all_features = False\n",
-    "univariate = False\n",
-    "\n",
-    "corr_train = False\n",
-    "\n",
-    "Boruta_GB = False\n",
-    "Boruta_RF = False\n",
-    "\n",
-    "BorutaSHAP_GB = False\n",
-    "BorutaSHAP_RF = False\n",
-    "\n",
-    "IMV_Tensor = False \n",
-    "IMV_Full = False \n",
-    "\n",
-    "LIME_train = False\n",
-    "\n",
-    "SHAP_insta = False\n",
-    "SHAP_avrag = False "
+    "    all_features = False\n",
+    "    univariate = False\n",
+    "    corr_train = False\n",
+    "    Boruta_GB = False\n",
+    "    Boruta_RF = False\n",
+    "    BorutaSHAP_GB = False\n",
+    "    BorutaSHAP_RF = False\n",
+    "    IMV_Tensor = False \n",
+    "    IMV_Full = False \n",
+    "    LIME_train = False\n",
+    "    SHAP_insta = False\n",
+    "    SHAP_avrag = False \n",
+    "    \n",
+    "    Rossmann = pd.read_csv('01-Data/Rossmann_treated.csv')\n",
+    "    Rosmann_stores = [23,64,103,133,135,216,224,256,266,311,355,405,455,487,558,649,672,714,738,742,773,785,\n",
+    "                 830,870,880,899,937,978,1011,1069]\n",
+    "    Rossmann.drop(columns = 'Customers', inplace = True)\n",
+    "    folder_path1='02-Results/LSTM'\n",
+    "    try:\n",
+    "        os.mkdir(f'{folder_path1}')\n",
+    "    except:\n",
+    "        pass\n",
+    "    for store in tqdm(Rosmann_stores):\n",
+    "        try:\n",
+    "            os.mkdir(f'{folder_path1}/Store{store}')\n",
+    "        except:\n",
+    "            pass\n",
+    "        \n",
+    "    make_variables_global()\n",
+    "    "
    ]
   },
   {
@@ -419,32 +459,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b36ac17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Rossmann = pd.read_csv('01-Data/Rossmann_treated.csv')\n",
-    "Rosmann_stores = [23,64,103,133,135,216,224,256,266,311,355,405,455,487,558,649,672,714,738,742,773,785,\n",
-    "             830,870,880,899,937,978,1011,1069]\n",
-    "\n",
-    "Rossmann.drop(columns = 'Customers', inplace = True)\n",
-    "\n",
-    "folder_path1='02-Results/LSTM'\n",
-    "try:\n",
-    "    os.mkdir(f'{folder_path1}')\n",
-    "except:\n",
-    "    pass\n",
-    "\n",
-    "for store in tqdm(Rosmann_stores):\n",
-    "    try:\n",
-    "        os.mkdir(f'{folder_path1}/Store{store}')\n",
-    "    except:\n",
-    "        pass"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "6fe8c2cf",
    "metadata": {},
@@ -459,8 +473,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "initial_set_up()\n",
+    "\n",
     "if all_features == True:\n",
-    "    for store in tqdm(Rosmann_stores):\n",
+    "    for store in tqdm(Rosmann_stores):     \n",
     "        torch.manual_seed(42);\n",
     "        np.random.seed(42);\n",
     "        pl.seed_everything(42);  \n",
@@ -506,7 +522,9 @@
     "        Error_dic['RMSE'] = RMSE\n",
     "        Error_dic['TIME'] =iteration_end-iteration_start\n",
     "        Error_df = pd.DataFrame.from_dict(Error_dic)\n",
-    "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n"
+    "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n",
+    "\n",
+    "clear_variables()"
    ]
   },
   {
@@ -537,6 +555,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "initial_set_up()\n",
+    "\n",
     "if univariate == True:\n",
     "    for store in tqdm(Rosmann_stores):\n",
     "        torch.manual_seed(42);\n",
@@ -584,7 +604,9 @@
     "        Error_dic['RMSE'] = RMSE\n",
     "        Error_dic['TIME'] =iteration_end-iteration_start\n",
     "        Error_df = pd.DataFrame.from_dict(Error_dic)\n",
-    "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n"
+    "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n",
+    "        \n",
+    "clear_variables()"
    ]
   },
   {
@@ -615,10 +637,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corr_bsline = pd.read_csv(f'02-Results/FS/Store{store}/Correlation/correlation_df.csv')\n",
-    "corr_bsline.drop(columns = 'all_features', inplace = True)\n",
+    "initial_set_up()\n",
     "\n",
     "if corr_train == True:\n",
+    "    corr_bsline = pd.read_csv(f'02-Results/FS/Store{store}/Correlation/correlation_df.csv')\n",
+    "    corr_bsline.drop(columns = 'all_features', inplace = True)\n",
+    "    \n",
     "    for corr_col in corr_bsline.columns[-1:]:\n",
     "        for store in tqdm(Rosmann_stores):        \n",
     "            \n",
@@ -672,7 +696,9 @@
     "            Error_dic['RMSE'] = RMSE\n",
     "            Error_dic['TIME'] =iteration_end-iteration_start\n",
     "            Error_df = pd.DataFrame.from_dict(Error_dic)\n",
-    "            Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors{corr_col}.csv')\n"
+    "            Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors{corr_col}.csv')\n",
+    "            \n",
+    "clear_variables()"
    ]
   },
   {
@@ -705,6 +731,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "initial_set_up()\n",
     "if Boruta_GB == True:\n",
     "    for store in tqdm(Rosmann_stores):\n",
     "        torch.manual_seed(42);\n",
@@ -756,7 +783,9 @@
     "        Error_dic['RMSE'] = RMSE\n",
     "        Error_dic['TIME'] =iteration_end-iteration_start\n",
     "        Error_df = pd.DataFrame.from_dict(Error_dic)\n",
-    "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n"
+    "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n",
+    "\n",
+    "clear_variables()"
    ]
   },
   {
@@ -785,6 +814,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "initial_set_up()\n",
     "if Boruta_RF == True:\n",
     "    for store in tqdm(Rosmann_stores):\n",
     "        torch.manual_seed(42);\n",
@@ -836,7 +866,9 @@
     "        Error_dic['RMSE'] = RMSE\n",
     "        Error_dic['TIME'] =iteration_end-iteration_start\n",
     "        Error_df = pd.DataFrame.from_dict(Error_dic)\n",
-    "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n"
+    "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n",
+    "\n",
+    "clear_variables()"
    ]
   },
   {
@@ -865,6 +897,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "initial_set_up()\n",
     "if BorutaSHAP_GB == True:\n",
     "    for store in tqdm(Rosmann_stores):\n",
     "        torch.manual_seed(42);\n",
@@ -916,7 +949,9 @@
     "        Error_dic['RMSE'] = RMSE\n",
     "        Error_dic['TIME'] =iteration_end-iteration_start\n",
     "        Error_df = pd.DataFrame.from_dict(Error_dic)\n",
-    "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n"
+    "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n",
+    "\n",
+    "clear_variables()"
    ]
   },
   {
@@ -945,6 +980,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "initial_set_up()\n",
     "if BorutaSHAP_RF == True:\n",
     "    for store in tqdm(Rosmann_stores):\n",
     "        torch.manual_seed(42);\n",
@@ -996,7 +1032,9 @@
     "        Error_dic['RMSE'] = RMSE\n",
     "        Error_dic['TIME'] =iteration_end-iteration_start\n",
     "        Error_df = pd.DataFrame.from_dict(Error_dic)\n",
-    "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n"
+    "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n",
+    "\n",
+    "clear_variables()"
    ]
   },
   {
@@ -1025,6 +1063,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "initial_set_up()\n",
     "if IMV_Tensor == True:\n",
     "    for store in tqdm(Rosmann_stores):\n",
     "        torch.manual_seed(42);\n",
@@ -1075,7 +1114,8 @@
     "        Error_dic['TIME'] =iteration_end-iteration_start\n",
     "        Error_df = pd.DataFrame.from_dict(Error_dic)\n",
     "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n",
-    "    "
+    "    \n",
+    "clear_variables()"
    ]
   },
   {
@@ -1104,6 +1144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "initial_set_up()\n",
     "if IMV_Full == True:\n",
     "    for store in tqdm(Rosmann_stores):\n",
     "        torch.manual_seed(42);\n",
@@ -1155,7 +1196,8 @@
     "        Error_dic['TIME'] =iteration_end-iteration_start\n",
     "        Error_df = pd.DataFrame.from_dict(Error_dic)\n",
     "        Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors.csv')\n",
-    "    "
+    "    \n",
+    "clear_variables()"
    ]
   },
   {
@@ -1184,6 +1226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "initial_set_up()\n",
     "if LIME_train == True:\n",
     "    LIME_inst_th = [0.007,0.008,0.009,0.01]\n",
     "    for threshold in LIME_inst_th:\n",
@@ -1236,7 +1279,9 @@
     "            Error_dic['RMSE'] = RMSE\n",
     "            Error_dic['TIME'] =iteration_end-iteration_start\n",
     "            Error_df = pd.DataFrame.from_dict(Error_dic)\n",
-    "            Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors{threshold}.csv')\n"
+    "            Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors{threshold}.csv')\n",
+    "\n",
+    "clear_variables()"
    ]
   },
   {
@@ -1268,6 +1313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "initial_set_up()\n",
     "if SHAP_insta == True:\n",
     "    SHAP_inst_th = [0.05,0.1,0.15,0.2]\n",
     "    for threshold in SHAP_inst_th:\n",
@@ -1320,7 +1366,9 @@
     "            Error_dic['RMSE'] = RMSE\n",
     "            Error_dic['TIME'] =iteration_end-iteration_start\n",
     "            Error_df = pd.DataFrame.from_dict(Error_dic)\n",
-    "            Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors{threshold}.csv')\n"
+    "            Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors{threshold}.csv')\n",
+    "\n",
+    "clear_variables()"
    ]
   },
   {
@@ -1352,6 +1400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "initial_set_up()\n",
     "if SHAP_avrag == True:\n",
     "    SHAP_avg_th = [0.01,0.02,0.03,0.04]\n",
     "    for threshold in SHAP_avg_th:\n",
@@ -1404,7 +1453,9 @@
     "            Error_dic['RMSE'] = RMSE\n",
     "            Error_dic['TIME'] =iteration_end-iteration_start\n",
     "            Error_df = pd.DataFrame.from_dict(Error_dic)\n",
-    "            Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors{threshold}.csv')\n"
+    "            Error_df.to_csv(f'{folder_path1}/{folder_path2}/Errors{threshold}.csv')\n",
+    "\n",
+    "clear_variables()"
    ]
   },
   {
@@ -1427,9 +1478,7 @@
    "id": "afb5177a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%tensorboard dev upload --logdir './02-Results/LSTM/logs_univariate' --one_shot"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1442,6 +1491,7 @@
  ],
  "metadata": {
   "celltoolbar": "Raw Cell Format",
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
