--- a/Interpreting What is Important/Rossmann/04-FSed LSTM Rossmann.ipynb
+++ b/Interpreting What is Important/Rossmann/04-FSed LSTM Rossmann.ipynb
@@ -99,28 +99,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0420849e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "%config InlineBackend.figure_format='retina'\n",
-    "\n",
-    "sns.set(style='whitegrid',palette='muted',font_scale=1.2)\n",
-    "\n",
-    "rcParams['figure.figsize']=12,8\n",
-    "\n",
-    "tqdm.pandas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9566829a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def initial_set_up():\n",
+    "    %matplotlib inline\n",
+    "    %config InlineBackend.figure_format='retina'\n",
+    "    sns.set(style='whitegrid',palette='muted',font_scale=1.2)\n",
+    "    rcParams['figure.figsize']=12,8\n",
+    "    tqdm.pandas()\n",
+    "    \n",
     "    N_EPOCHS = 220\n",
     "    arr = np.arange(14, N_EPOCHS, 5)\n",
     "    # Convert the elements of the array to strings and create a list\n",
